Add VoiceLive assistant using existing Foundry agent

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# agentic behavious
+
+instructions_agent.md 
+credentials.md
+examplecode.md
+agentcode.md
+functionscalling.md
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
